tests/paczka1/fuzzy1/90623375.err
Error in line 3: S261 S347 69,7
Error in line 4: Pht0MTd S261 155,9
Error in line 14: Pht0MTd A760 33,5
Error in line 13: sofTr A760 83,0
Error in line 21: sofTr S261 18,5
Error in line 22: 5XmP S680 77,3
Error in line 27: 5XmP A760 55,6
Error in line 35: i7I A760 77,1
